[RTL] Incorrect alt text position in right to left context https://bugs.webkit.org/show_bug.cgi?id=237352 <rdar://problem/89657704>

Reviewed by Simon Fraser.

Source/WebCore:

Take the inline direction into account when computing the alt text location.

* rendering/RenderImage.cpp:
(WebCore::RenderImage::paintReplaced): This is mostly moving things around/modernizing it.

LayoutTests:

* fast/images/alt-text-with-right-to-left-inline-direction-expected-mismatch.html: Added.
* fast/images/alt-text-with-right-to-left-inline-direction.html: Added.



Canonical link: https://commits.webkit.org/247973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290726 268f45cc-cd09-0410-ab3c-d52691b4dbfc